<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAppbg"
    tools:context="com.freeintelligence.robotclient.ui.activity.SetActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:layout_gravity="center_vertical"
    android:text="@string/set_1"
    android:textColor="@color/colorNewCartitle"
    android:paddingLeft="80dp"
    android:textSize="28dp"
    android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:text="@string/set_2"
        android:textColor="@color/colorNewCartitle"
        android:paddingLeft="80dp"
        android:textSize="28dp"
        android:layout_marginTop="2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:layout_gravity="center_vertical"
        android:text="@string/set_3"
        android:textColor="@color/colorNewCartitle"
        android:paddingLeft="80dp"
        android:textSize="28dp"
        android:layout_marginTop="2dp"/>

</LinearLayout>
