<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freeintelligence.robotclient.ui.activity.InspectActivity">
    <include
        layout="@layout/toolbar"/>
    <RadioGroup
        android:layout_width="@dimen/dp_47"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorNewCartitle"
        android:id="@+id/rg_inspect"
        android:layout_below="@+id/toolbar">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_33"
            android:textSize="@dimen/dp_8"
            android:gravity="center"
            android:button="@null"
            android:text="@string/inspect1"
            android:id="@+id/rb_in1"
            android:checked="true"
            android:background="@drawable/selector_inspectbg"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorWhite"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_33"
            android:textSize="@dimen/dp_8"
            android:gravity="center"
            android:button="@null"
            android:text="@string/inspect2"
            android:id="@+id/rb_in2"
            android:background="@drawable/selector_inspectbg"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorWhite"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_33"
            android:textSize="@dimen/dp_8"
            android:gravity="center"
            android:text="@string/inspect3"
            android:button="@null"
            android:id="@+id/rb_in3"
            android:background="@drawable/selector_inspectbg"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/colorWhite"/>
    </RadioGroup>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/rg_inspect"
        android:layout_below="@+id/toolbar"
       android:id="@+id/fl_inspect">
    </FrameLayout>
</RelativeLayout>
