<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colortitlebar"
    tools:context="com.freeintelligence.robotclient.ui.activity.MaintainActivity">
    <include
        layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="880px"
            android:layout_height="84px"
            android:paddingLeft="55px"
            android:id="@+id/tv_project"
            android:textColor="@color/colorword"
            android:background="#FFFFFF"
            android:hint="@string/subscribe1"
            android:textSize="28px"
            android:textColorHint="@color/edit_hint_color"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="880px"
            android:layout_height="84px"
            android:layout_marginTop="70px"
            android:paddingLeft="55px"
            android:id="@+id/tv_number"
            android:textColor="@color/colorword"
            android:background="#FFFFFF"
            android:hint="@string/subscribe2"
            android:textSize="28px"
            android:gravity="center_vertical"
            android:textColorHint="@color/edit_hint_color"/>
        <TextView
            android:layout_width="880px"
            android:layout_height="84px"
            android:layout_marginTop="70px"
            android:id="@+id/tv_time"
            android:textColor="@color/colorword"
            android:background="#FFFFFF"
            android:hint="@string/subscribe3"
            android:textColorHint="@color/edit_hint_color"
            android:textSize="28px"
            android:paddingLeft="55px"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="880px"
            android:layout_height="84px"
            android:layout_marginTop="70px"
            android:paddingLeft="55px"
            android:id="@+id/tv_phone_number"
            android:textColor="@color/colorword"
            android:background="#FFFFFF"
            android:hint="请输入手机号"
            android:textSize="28px"
            android:gravity="center_vertical"
            android:textColorHint="@color/edit_hint_color"/>
        <TextView
            android:layout_centerHorizontal="true"
            android:layout_width="880px"
            android:layout_height="84px"
            android:layout_marginTop="235px"
            android:background="@color/colorloadbg"
            android:text="预约"
            android:gravity="center"
            android:textSize="28px"
            android:id="@+id/tv_maintainsub"/>
    </LinearLayout>

</RelativeLayout>
